--- a/index.html
+++ b/index.html
@@ -2,25 +2,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>hello-wasm example</title>
+        <title>Lotus client</title>
     </head>
     <body>
     <script>
         let websocket = new WebSocket('ws://localhost:8123');
         let open = new Promise(resolve => websocket.onopen = resolve);
+        let messages = [];
 
-        websocket.binaryType = 'arrayBuffer';
+        websocket.binaryType = 'arraybuffer';
 
-        window.send_data = function(bytes) {
+        websocket.onmessage = msg => {
+            messages.push(new Uint8Array(msg.data));
+        };
+
+        window.send_message = function(bytes) {
             open.then(() => websocket.send(bytes));
+        };
+
+        window.read_message = function() {
+            return messages.shift();
+        };
+
+        window.log = function(str) {
+            console.log(str);
         };
 
     </script>
     <script type="module">
-        import init, {main} from "./client/pkg/lotus_client.js";
+        import init, { start, update } from "./client/pkg/lotus_client.js";
 
         init().then(() => {
-            main();
+            start();
+
+            setInterval(update, 100);
         });
     </script>
     </body>
